Refactor stream collection to use toList() method